Atualização das pastas e desafio

--- a/desafios/tabela-estilizada/index.html
+++ b/desafios/tabela-estilizada/index.html
@@ -4,12 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela Estilizada</title>
+    <title>Dev Quest - Tabela Estilizada</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- 
+        Faça uma tabela de roupas com tamanho e valor da peça descrito em cada linha.
+        Não esqueça de adicionar um cabeçalho em cada coluna.
+        Cor de fundo do cabeçalho moda - #BB86FC
+        Cor de fundo do cabeçalho casa - #00C4B4
+        Cor de fundo dos valores da tabela - #424250
+        Regra: não estilize usando as tags HTML, crie classes para estilizar sua tabela.
+            EX: .produtos-casa th { … }
+    -->
+
 </head>
 <body>
-    <h1>Tabela Estilizada</h1>
+    <h1>Moda Masculina</h1>
+    <table>
+        <tr class="moda">
+          <th>Produto</th>
+          <th>Tamanho</th>
+          <th>Valor</th>
+        </tr>
+        <tr>
+            <td>Camisa</td>
+            <td>G</td>
+            <td>R$ 49,00</td>
+        </tr>
+        <tr>
+            <td>Tênis</td>
+            <td>42</td>
+            <td>R$ 234,50</td>
+        </tr>
+        <tr>
+            <td>Meias</td>
+            <td>39-42</td>  
+            <td>R$ 29,99</td>
+        </tr>
+        <tr>
+            <td>Calça</td>
+            <td>44</td>
+            <td>R$ 135,90</td>
+        </tr>
+      </table>
 
-    
+      <h1>Casa</h1>
+      <table>
+        <tr class="casa">
+            <th>Produto</th>
+            <th>Valor</th>
+        </tr>
+        <tr>
+          <td>Fogão</td>
+          <td>R$ 1.149,00</td>
+        </tr>
+        <tr>
+            <td>Geladeira</td>
+            <td>R$ 4.694,50</td>
+        </tr>
+        <tr>
+            <td>Forno</td>
+            <td>R$ 1.359,99</td>
+        </tr>
+        <tr>
+            <td>Sofá</td>
+            <td>R$ 1.200,00</td>
+        </tr>
+      </table>
+
 </body>
+
 </html>
