09 continuação das TAGS

--- a/aulas/intermediario/html-intermediario/09/index.html
+++ b/aulas/intermediario/html-intermediario/09/index.html
@@ -26,14 +26,33 @@
             <!-- <header>Podemos colocar uma tag header dentro de uma section</header> -->
 
             <h2>Modulo HTML Intermediário</h2>
-            <img src="logo-hmtl.jpg" alt="">
+            <figure><img src="logo-hmtl.jpg" alt="">
+            <figcaption>Aqui inserimos as descrição da imagem</figcaption></figure>
             <p>Este módulo é sobre HTML intermediário</p>
         </section>
 
+        <article>
+            <h3>C#</h3>
+            <p>C# é muito divertido</p>
+        </article>
+
+        <article>
+            <h3>JavaScrpit</h3>
+            <p>JavaScript é uma linguagem de programação fornte e backendo com node.js</p>
+        </article>
+
+        <aside>
+            <h3>Gostou da página?</h3>
+            
+        </aside>
+        
     </main>
 
     <footer>
         <p>Este é o nosso rodapé. Porém, pode ser utilizado como footer de uma section.</p>
+        <address>
+            <a href="https://www.linkedin.com/in/gustavo-jv-maia/">LinkedIn</a>
+        </address>
     </footer>
 
     <!-- Poderíamos usar uma div no lugar das tags, porém é muito mais semântico utilizar as tags descritas neste exemplo. -->
