--- a/aulas/intermediario/css-intermediario/02-estilo-texto/index.html
+++ b/aulas/intermediario/css-intermediario/02-estilo-texto/index.html
@@ -80,7 +80,7 @@
       Para acessar, <a class="sem-text-decoration" href="#">clique aqui</a>
     </p>
 
-    <!-- <h4>Altura entre linhas - line height</h4>
+    <h4>Altura entre linhas - line height</h4>
     <p class="altura-entre-linhas fundo">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta laboriosam
       tempora ullam quisquam id voluptas distinctio culpa porro alias rerum
@@ -92,8 +92,8 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta laboriosam
       tempora ullam quisquam id voluptas distinctio culpa porro alias rerum
       numquam illum voluptate eum, asperiores rem ipsa esse, dolores labore?
-    </p> -->
+    </p>
   </body>
 </html>
 
-<!-- Parei na aula 03 -->
+
