--- a/aulas/intermediario/css-intermediario/05-baixando-fontes-customizadas/index.html
+++ b/aulas/intermediario/css-intermediario/05-baixando-fontes-customizadas/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Baixando fontes customizadas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Baixando fontes customizadas</h1>
     
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic atque modi obcaecati qui quam eligendi iure voluptates sed illum non recusandae tempore, cupiditate expedita sunt ipsam accusantium eos perspiciatis eveniet!</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem a minima provident! Fuga, debitis corporis. Temporibus earum, voluptate quaerat fugit commodi reiciendis cumque, totam sequi debitis quas a sed similique!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, aliquam dignissimos earum harum, natus reprehenderit maxime consectetur repudiandae hic ab exercitationem! Neque quasi, velit commodi unde quia voluptatibus vel id?</p>
+
 </body>
 </html>
+
