--- a/aulas/intermediario/css-intermediario/08-background/index.html
+++ b/aulas/intermediario/css-intermediario/08-background/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Background</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Background</h1>
+
+    <h2>Background Images</h2>
+    <div class="bg bg-image">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto id molestias cum nemo nobis accusamus, corrupti fugiat quis pariatur esse iure sed repudiandae obcaecati harum ipsam, laboriosam magnam numquam consequatur.</p>
+    </div>
+
+    <!-- <h2>Background Size Cover</h2>
+    <div class="bg bg-size-cover">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad iusto et suscipit fugit quis error necessitatibus obcaecati explicabo laboriosam reiciendis commodi, sint, at assumenda adipisci reprehenderit quidem vero. Saepe, cumque!</p>
+    </div> -->
     
+    <!-- <h2>Background SOMETHIG</h2>
+    <div class="bg bg-SOMETHING">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis sunt est non doloremque ea aperiam voluptas, facere debitis ipsum consequatur odit quisquam minus repellat repellendus. Maxime autem aspernatur commodi nam!</p>
+    </div> -->
+
 </body>
 </html>
