--- a/aulas/intermediario/css-intermediario/08-background/index.html
+++ b/aulas/intermediario/css-intermediario/08-background/index.html
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Background</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Background</h1>
 
     <h2>Background Images</h2>
     <div class="bg bg-image">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto id molestias cum nemo nobis accusamus, corrupti fugiat quis pariatur esse iure sed repudiandae obcaecati harum ipsam, laboriosam magnam numquam consequatur.</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto id
+        molestias cum nemo nobis accusamus, corrupti fugiat quis pariatur esse
+        iure sed repudiandae obcaecati harum ipsam, laboriosam magnam numquam
+        consequatur.
+      </p>
     </div>
 
-    <!-- <h2>Background Size Cover</h2>
+    <h2>Background Reapet</h2>
+    <div class="bg bg-repeat">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis
+        sunt est non doloremque ea aperiam voluptas, facere debitis ipsum
+        consequatur odit quisquam minus repellat repellendus. Maxime autem
+        aspernatur commodi nam!
+      </p>
+    </div>
+
+    <h2>Background Size Cover</h2>
     <div class="bg bg-size-cover">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad iusto et suscipit fugit quis error necessitatibus obcaecati explicabo laboriosam reiciendis commodi, sint, at assumenda adipisci reprehenderit quidem vero. Saepe, cumque!</p>
-    </div> -->
-    
-    <!-- <h2>Background SOMETHIG</h2>
-    <div class="bg bg-SOMETHING">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis sunt est non doloremque ea aperiam voluptas, facere debitis ipsum consequatur odit quisquam minus repellat repellendus. Maxime autem aspernatur commodi nam!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat maiores quis aut doloribus minima, numquam doloremque aliquid porro expedita laborum excepturi beatae hic veritatis non praesentium soluta sint aperiam necessitatibus.</p>
+    </div>
+
+    <!-- <h2>Background Fixed</h2>
+    <div class="bg bg-fixed">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum vel recusandae, ad, placeat eligendi commodi praesentium fugit minima totam, incidunt ut. Perferendis reprehenderit, excepturi tenetur rerum obcaecati laudantium labore voluptatem.</p>
     </div> -->
 
-</body>
+    <!-- <h2>Background Position</h2>
+    <div class="bg bg-position">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam iusto sed quis vero tempora itaque odit libero perspiciatis ratione, quia, ipsam nihil amet quas! Mollitia vero minima laboriosam aliquid sed!</p>
+    </div> -->
+
+    <!-- <h2>Background Reapet</h2>
+    <div class="bg bg-repeat">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore tempora earum, pariatur doloremque quisquam officiis. Nihil, magnam minima! Neque doloribus modi soluta rerum ullam praesentium laboriosam in et facere libero?</p>
+    </div> -->
+
+    <!-- <h2>Background Reapet</h2>
+    <div class="bg bg-repeat">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa quod, non commodi impedit quidem maiores. Rerum illum et explicabo? Exercitationem tempora beatae aspernatur asperiores culpa eum maxime impedit error quaerat!</p>
+    </div> -->
+
+
+  </body>
 </html>
