--- a/aulas/intermediario/css-intermediario/08-background/index.html
+++ b/aulas/intermediario/css-intermediario/08-background/index.html
@@ -35,26 +35,15 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat maiores quis aut doloribus minima, numquam doloremque aliquid porro expedita laborum excepturi beatae hic veritatis non praesentium soluta sint aperiam necessitatibus.</p>
     </div>
 
-    <!-- <h2>Background Fixed</h2>
+    <h2>Background Fixed</h2>
     <div class="bg bg-fixed">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum vel recusandae, ad, placeat eligendi commodi praesentium fugit minima totam, incidunt ut. Perferendis reprehenderit, excepturi tenetur rerum obcaecati laudantium labore voluptatem.</p>
-    </div> -->
+    </div>
 
-    <!-- <h2>Background Position</h2>
+    <h2>Background Position</h2>
     <div class="bg bg-position">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam iusto sed quis vero tempora itaque odit libero perspiciatis ratione, quia, ipsam nihil amet quas! Mollitia vero minima laboriosam aliquid sed!</p>
-    </div> -->
-
-    <!-- <h2>Background Reapet</h2>
-    <div class="bg bg-repeat">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Labore tempora earum, pariatur doloremque quisquam officiis. Nihil, magnam minima! Neque doloribus modi soluta rerum ullam praesentium laboriosam in et facere libero?</p>
-    </div> -->
-
-    <!-- <h2>Background Reapet</h2>
-    <div class="bg bg-repeat">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa quod, non commodi impedit quidem maiores. Rerum illum et explicabo? Exercitationem tempora beatae aspernatur asperiores culpa eum maxime impedit error quaerat!</p>
-    </div> -->
-
+    </div>
 
   </body>
 </html>
