--- a/aulas/intermediario/css-intermediario/09-display/index.html
+++ b/aulas/intermediario/css-intermediario/09-display/index.html
@@ -29,11 +29,11 @@
         <li>3</li>
     </ul>
 
-    <!-- <h2>Display Esconder</h2>
+    <h2>Display Esconder</h2>
     <ul class="esconder">
         <li>1</li>
         <li>2</li>
         <li>3</li>
-    </ul> -->
+    </ul>
   </body>
 </html>
