10 elementos estatico absoluto

--- a/aulas/intermediario/css-intermediario/10-position-static-relative-absolute/index.html
+++ b/aulas/intermediario/css-intermediario/10-position-static-relative-absolute/index.html
@@ -10,5 +10,21 @@
 <body>
     <h1>Position: Static, Relative and Absolute</h1>
     
+    <div class="elemento elemento-estatico">
+        Static
+    </div>
+
+    <!-- <div class="elemento elemento-relativo">
+        Relative
+    </div> -->
+
+    <!-- <div class="elemento elemento-absoluto">
+        Absolute
+    </div> -->
+
+    <!-- <div class="elemento elemento-estatico">
+        Outro elemento Static
+    </div> -->
+    
 </body>
 </html>
