elemento relativo filho com pai

--- a/aulas/intermediario/css-intermediario/10-position-static-relative-absolute/index.html
+++ b/aulas/intermediario/css-intermediario/10-position-static-relative-absolute/index.html
@@ -14,17 +14,23 @@
         Static
     </div>
 
-    <!-- <div class="elemento elemento-relativo">
+    <div class="elemento elemento-relativo">
         Relative
-    </div> -->
+    </div>
 
-    <!-- <div class="elemento elemento-absoluto">
+    <div class="elemento elemento-absoluto">
         Absolute
-    </div> -->
+    </div>
 
-    <!-- <div class="elemento elemento-estatico">
+    <div class="elemento elemento-estatico">
         Outro elemento Static
-    </div> -->
+    </div>
+
+    <div class="elemento elemento-relativo-com-filho">
+        <div class="elemento elemento-absoluto-com-pai">
+            Elemento relativo com Filho
+        </div>
+    </div>
     
 </body>
 </html>
