--- a/aulas/intermediario/css-intermediario/12-responsividade/links/quem-somos.html
+++ b/aulas/intermediario/css-intermediario/12-responsividade/links/quem-somos.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Quem somos</title>
 </head>
 <body>
+
+    <h1>
+        <a href="../index.html">Voltar</a>
+    </h1>
     
 </body>
 </html>
