--- a/aulas/intermediario/css-intermediario/12-responsividade/index.html
+++ b/aulas/intermediario/css-intermediario/12-responsividade/index.html
@@ -30,9 +30,20 @@
                 <p>O justiceiro será testado psicologicamente e fisicamente como nunca fora antes em um confronto bastante pessoal. Cabe a Batman encontrar uma maneira de deter o sádico vilão antes que mais vidas sejam perdidas.</p>
             </div>
 
+
             <div class="image">
-                <img src="./images/batman.jpg" alt="dark knight" />
+                <picture>
+                    <source srcset="mdn-logo-wide.png" media="(min-width: 600px)">
+
+                        <img src="mdn-logo-narrow.png" alt="">
+                    
+                </picture>
+
+                
             </div>
+            <!-- <div class="image">
+                <img src="./images/batman.jpg" alt="dark knight" />
+            </div> -->
 
         </section>
     </main>
