--- a/aulas/avancado/html-avancado/04-audio/index.html
+++ b/aulas/avancado/html-avancado/04-audio/index.html
@@ -16,6 +16,7 @@
         <source src="./audios/audio.ogg" type="audio/ogg">
         <source src="./audios/audio.mp3" type="audio/mp3">
         <source src="./audios/audio.wav" type="audio/wav">
+        <p>Seu navegador não tem suporte para tag audio.</p>
     </audio>
 
 </body>
