--- a/aulas/avancado/html-avancado/05-video/index.html
+++ b/aulas/avancado/html-avancado/05-video/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos - parte 1</title>
+    <title>Vídeos - parte 1</title>
 
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Videos - Parte 1</h1>
+    <h1>Vídeos - Parte 1</h1>
     
+    <video src="./videos/video.mp4" width="400" controls muted loop poster="./images/thumb.jpg"></video>
 </body>
 </html>
