--- a/aulas/avancado/html-avancado/07-iframe/index.html
+++ b/aulas/avancado/html-avancado/07-iframe/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iframe - Index</title>
 
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Iframe</h1>
     
-    <iframe src="sobre.html" frameborder="0" width="500" height="500"></iframe>
+    <iframe src="sobre.html" frameborder="0" width="400" height="100"></iframe>
 
-    iframe
+    <br/><br/><br/>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YTBYZULhm-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
