pseudo elementos no css para estiliar

--- a/aulas/avancado/css-avancado/02-pseudo-elementos/index.html
+++ b/aulas/avancado/css-avancado/02-pseudo-elementos/index.html
@@ -41,25 +41,27 @@
       </p>
     </div>
 
-    <div> 
-        <h2>Marker
-            <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-            </ul>
-        </h2>
+    <div>
+      <h2>
+        Marker
+        <ul>
+          <li>Item 1</li>
+          <li>Item 2</li>
+          <li>Item 3</li>
+          <li>Item 4</li>
+        </ul>
+      </h2>
     </div>
     <div>
-        <h2>
-            <img src=".../avancado/html-avancado/05-video/images/logo.png"" alt="">
-            Before</h2>
-            <!-- avancado\html-avancado\05-video -->
+      <h2 class="imagem-antes-titulo">After</h2>
+      <h2>After</h2>
+      <h2 class="imagem-antes-titulo">After</h2>
     </div>
 
     <div>
-        <h2>After</h2>
+      <h2>After</h2>
+      <h2 class="imagem-depois-titulo">After</h2>
+      <h2 class="imagem-depois-titulo">After</h2>
     </div>
   </body>
 </html>
