--- a/aulas/avancado/css-avancado/03-seletores/index.html
+++ b/aulas/avancado/css-avancado/03-seletores/index.html
@@ -10,5 +10,22 @@
 </head>
 <body>
     <h1>Seletores</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet hic animi dolores odit esse autem laboriosam et unde perspiciatis. Cum nihil iure dolores. Fuga, reprehenderit nesciunt. Tenetur animi corporis temporibus!</p>
+
+    <h2>Seleção com .classe</h2>
+    <span class="paragrafo">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, mollitia sequi, amet molestiae quam saepe, voluptates voluptas consequuntur earum laboriosam molestias rem qui quis quae ab aut at dolorum quo!
+    </span>
+
+    <h2>Seleção com #id</h2>
+    <nav id="menu">
+        <ul>
+            <li>Sobre</li>
+            <li>Contato</li>
+            <li>Soluções</li>
+            <li>Carreira</li>
+        </ul>
+    </nav>
+
 </body>
 </html>
