--- a/aulas/avancado/css-avancado-parte-2/02-flex-container-justify-content/justify-content.html
+++ b/aulas/avancado/css-avancado-parte-2/02-flex-container-justify-content/justify-content.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Justify Content</title>
+    <title>Justify Container - Justify content</title>
 
     <link rel="stylesheet" href="./css/globals.css" />
     <link rel="stylesheet" href="./css/justify-content.css" />
   </head>
   <body>
+    <h1>Justify Container - Justify content</h1>
     <section>
-      <h2>Justify Content</h2>
+      <h2>Flex Start</h2>
 
       <div class="container flex-start">
         <div class="item item1">Item 1</div>
@@ -20,54 +21,54 @@
       </div>
     </section>
 
-    <!-- <section>
-        <h2>Justify Content</h2>
+    <section>
+        <h2>Flex End</h2>
   
-        <div class="container flex-start">
+        <div class="container flex-end">
           <div class="item item1">Item 1</div>
           <div class="item item2">Item 2</div>
           <div class="item item3">Item 3</div>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section>
-        <h2>Justify Content</h2>
+    <section>
+        <h2>Center</h2>
   
-        <div class="container flex-start">
+        <div class="container center">
           <div class="item item1">Item 1</div>
           <div class="item item2">Item 2</div>
           <div class="item item3">Item 3</div>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section>
-        <h2>Justify Content</h2>
+    <section>
+        <h2>Space Between</h2>
   
-        <div class="container flex-start">
+        <div class="container space-between">
           <div class="item item1">Item 1</div>
           <div class="item item2">Item 2</div>
           <div class="item item3">Item 3</div>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section>
-        <h2>Justify Content</h2>
+    <section>
+        <h2>Space Between</h2>
   
-        <div class="container flex-start">
+        <div class="container space-around">
           <div class="item item1">Item 1</div>
           <div class="item item2">Item 2</div>
           <div class="item item3">Item 3</div>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section>
-        <h2>Justify Content</h2>
+    <section>
+        <h2>Evenly</h2>
   
-        <div class="container flex-start">
+        <div class="container space-evenly">
           <div class="item item1">Item 1</div>
           <div class="item item2">Item 2</div>
           <div class="item item3">Item 3</div>
         </div>
-      </section> -->
+      </section>
   </body>
 </html>
