--- a/desafios/css-avancado-figma/index.html
+++ b/desafios/css-avancado-figma/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/rest.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +19,7 @@
     <header class="header">
         <a href="#" class="logo">
             <img src="src/images/logo.png" alt="logo-the-bank">
-            <h1>The Bank</h1>
+            <h1>the_bank</h1>
         </a>
 
         <nav class="nav-bar">
@@ -34,7 +35,7 @@
     </header>    
     <main></main>
     
-    <footer></footer>
+    <footer><h4>Developed by <a href="https://www.linkedin.com/in/gustavo-jv-maia/" target="_blank">Gustavo Maia</a></h4></footer>
 
 </body>
 </html>
