desafio-02-css-avancado

--- a/desafios/css-avancado-figma/index.html
+++ b/desafios/css-avancado-figma/index.html
@@ -7,7 +7,7 @@
     <title>the_bank</title>
 
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/rest.css">
+    <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/responsive.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
