--- a/desafios/css-avancado-figma-02/index.html
+++ b/desafios/css-avancado-figma-02/index.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/responsive.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300&family=Public+Sans:wght@300;400;800&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -17,12 +21,16 @@
     <main>
         <div class="imagens">
             <ul>
-                <li><a href="src/images/rome.png"></a></li>
-                <li><a href="src/images/boat.png"></a></li>
-                <li><a href="src/images/sand-and-sea.png"></a></li>
-                <li><a href="src/images/starry-night.png"></a></li>
+                <li><img src="src/images/rome.png" alt=""></li>
+                <li><img src="src/images/boat.png" alt=""></li>
+                <li><img src="src/images/sand-and-sea.png" alt=""></li>
+                <li><img src="src/images/starry-night.png"></li>
             </ul>
         </div>
     </main>
+
+    <footer class="rodape">
+        Developed by Gustavo Maia
+    </footer>
 </body>
 </html>
