--- a/desafios/css-avancado-figma-02/index.html
+++ b/desafios/css-avancado-figma-02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS-avançado-desafio-02</title>
 
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/reset.css">
@@ -16,15 +16,15 @@
 </head>
 <body>
 
-    <header></header>    
+    <header><navbar></navbar></header>    
 
     <main>
         <div class="imagens">
             <ul>
-                <li><img src="src/images/rome.png" alt=""></li>
-                <li><img src="src/images/boat.png" alt=""></li>
-                <li><img src="src/images/sand-and-sea.png" alt=""></li>
-                <li><img src="src/images/starry-night.png"></li>
+                <li><img src="src/images/rome.png" alt="" height="431px"                     width="335px">Rome</li>
+                <li><img src="src/images/boat.png" alt="">Boat</li>
+                <li><img src="src/images/sand-and-sea.png" alt="">Sand and sea</li>
+                <li><img src="src/images/starry-night.png">Starry night</li>
             </ul>
         </div>
     </main>
